--- a/aboutjkpg/aboutjkpg.html
+++ b/aboutjkpg/aboutjkpg.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="/aboutjkpg/aboutjkpg.css" />
     <title></title>
   </head>
-  <header>Visit Jönköping</header>
+  <img
+    class="jkpgheader"
+    src="/aboutjkpg/AdobeStock_249590601.jpeg"
+    alt="jkpgheader"
+  />
+  <header><h1>Visit Jönköping</h1></header>
   <body>
     <main>
       <div class="mammadiv">
@@ -86,6 +91,7 @@
           </section>
           <section>
             <h1>What to eat</h1>
+            <p class="headlines">Enjoy the good cuisine:</p>
             <ul>
               <li>
                 <a href="https://gladjejonkoping.se/pablo">Tacos at Pablo</a>
@@ -105,10 +111,9 @@
           </section>
         </div>
         <div class="pictures">
-          <img src="" alt="" />
-          <img src="" alt="" />
-          <img src="" alt="" />
-          <img src="" alt="" />
+          <img src="/aboutjkpg/jkpg1.webp" alt="1st" />
+          <img src="/aboutjkpg/jkpg2.jpeg" alt="2st" />
+          <img src="/aboutjkpg/jkpg3.jpeg" alt="3st" />
         </div>
       </div>
     </main>
