--- a/myWebsite/myWebsite.html
+++ b/myWebsite/myWebsite.html
@@ -15,8 +15,8 @@
       <div class="mammadiv">
         <div class="leftdiv">
           <nav class="press">
-            <a href="/aboutjkpg/">About Jönköping</a>
-            <a href="/myPortfolio/">My Portfolio</a>
+            <a class="main1" href="/aboutjkpg/">About Jönköping</a>
+            <a class="main2" href="/myPortfolio/">My Portfolio</a>
           </nav>
           <p>
             This is a webpage about me, Filippa. I was born in 2000 and I'm a
