responsive på jkpg
tror jag gjort jönköping responsive

--- a/aboutjkpg/aboutjkpg.html
+++ b/aboutjkpg/aboutjkpg.html
@@ -111,9 +111,9 @@
           </section>
         </div>
         <div class="pictures">
-          <img src="/aboutjkpg/jkpg1.webp" alt="1st" />
-          <img src="/aboutjkpg/jkpg2.jpeg" alt="2st" />
-          <img src="/aboutjkpg/jkpg3.jpeg" alt="3st" />
+          <img src="/aboutjkpg/jkpg1.webp" alt="1st" class="first" />
+          <img src="/aboutjkpg/jkpg2.jpeg" alt="2st" class="second" />
+          <img src="/aboutjkpg/visingso.jpeg" alt="3st" class="third" />
         </div>
       </div>
     </main>
