korrigerat allt som var knas nästan
fixat en del

--- a/myPortfolio/myPortfolio.html
+++ b/myPortfolio/myPortfolio.html
@@ -9,19 +9,17 @@
   </head>
   <body>
     <div>
-      <p class="gradient">FILIPPA ELEONORA</p>
+      <p class="gradient">FILIPPA BIGOT STUDIO</p>
     </div>
     <div id="responsive">
       <nav class="topnav">
-        <ul class="navbar">
-          <li><a href="/aboutjkpg/"></a>About Jönköping</li>
-          <li><a href="/myWebsite/"></a>Main</li>
-          <li></li>
-        </ul>
+            <a class="navbartext" href="/myWebsite/">Main Page</a>
+            <a class="navbartext" href="/aboutjkpg/">About Jönköping</a>
+          </nav>
       </nav>
     </div>
     <div class="slide-left">
-      <h1>My Portfolio</h1>
+      <h1 class="headline">My Portfolio</h1>
     </div>
     <main class="container">
       <div class="pic">
