NU FUNKT TACK Å HEJ FÖR IDAG
Heja heja

--- a/aboutjkpg/aboutjkpg.html
+++ b/aboutjkpg/aboutjkpg.html
@@ -18,8 +18,10 @@
       <div class="mammadiv">
         <div class="leftdiv">
           <nav class="press">
-            <a class="main1" href="/myWebsite/">Main Page</a>
-            <a class="main2" href="/myPortfolio/">My Portfolio</a>
+            <a class="main1" href="/myWebsite/myWebsite.html">Main Page</a>
+            <a class="main2" href="/myPortfolio/myPortfolio.html"
+              >My Portfolio</a
+            >
           </nav>
           <p>
             Finding exiting things to do in a new city can be hard sometimes.
