--- a/myPortfolio/myPortfolio.html
+++ b/myPortfolio/myPortfolio.html
@@ -13,8 +13,8 @@
     </div>
     <div id="responsive">
       <nav class="topnav">
-            <a class="navbartext" href="/myWebsite/">Main Page</a>
-            <a class="navbartext" href="/aboutjkpg/">About Jönköping</a>
+            <a class="navbartext" href="/myWebsite/myWebsite.html">Main Page</a>
+            <a class="navbartext" href="/aboutjkpg/aboutjkpg.html">About Jönköping</a>
           </nav>
       </nav>
     </div>
