--- a/myPortfolio/myPortfolio.html
+++ b/myPortfolio/myPortfolio.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/myPortfolio/myPortfolio.css" />
+    <script src="/js/main.js" defer></script>
     <title></title>
   </head>
   <body>
@@ -33,8 +34,8 @@
         <img src="/myPortfolio/kraft1.jpg" alt="kraft1" />
         <img src="/myPortfolio/kraft2.jpg" alt="kraft2" />
     </main>
-    <h6>Subscribe to my portfolio updates here</h6>
-    <input placeholder="Email" />
-    <button>Subscribe</button>
+    <h6 id="heading">Subscribe to my portfolio updates here</h6>
+    <input id="input-email" placeholder="Email" />
+    <button id="subscribe-button">Subscribe</button>
   </body>
 </html>
